Adicionando o primeiro parágrafo

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Curso de Git e GitHub</title>
-</head>
-<body>
+	<head>
+		<title>Curso de Git e GitHub</title>
+	</head>
+	<body>
 	<h2>Página inicial</h2>
-</body>
+	<p>Adicionando o primeiro parágrafo da página.</p>
+	</body>
 </html>
